Made navbar responsive, fixed 'Event 12/27' and button alignment when resizing screen

--- a/style.css
+++ b/style.css
@@ -67,7 +67,19 @@ h6 {
 }
 
 #non-mobile {
-    display: none;
+    display: flex;
+    justify-content: flex-end;
+    background-color: black;
+}
+
+#non-mobile a {
+    color: white;
+    padding: 2rem 1rem;
+    font-size: 1.75rem;
+}
+
+#non-mobile a:hover {
+    color: lightcoral;
 }
 
 
@@ -78,20 +90,19 @@ h6 {
 
 
 
-.header-text {
+.header-text-container {
     display: flex;
     position: absolute;
     color: white;
     font-size: 3rem;
-    padding-top: 30%;
-    padding-left: 2%;
+    padding: 30% 0 0 2%;
+
 }
 
 #header-button {
     display: flex;
     position: absolute;
-    margin-top: 42%;
-    margin-left: 2%;
+    margin-top: 25%;
 }
 
 .header {
@@ -237,6 +248,10 @@ h6 {
         padding: 1rem;
         margin: auto;
     }
+}
 
-
+@media (min-width: 800px) {
+    #mobile {
+        display: none;
+    }
 }
